@@ -1,0 +1,11 @@
+# $Header$
+#
+# Uh .. I'm just too lazy to change dirs ..
+#
+# $Log$
+# Revision 1.1  2005-10-30 03:24:22  tino
+# additional possibilities
+#
+
+all:
+	cd ..; $(MAKE) all
