@@ -1,3 +1,11 @@
+2005-10-30    <tino@firebird.03.softkill.net>
+
+	* socklinger.c (socklinger): improved output to screen
+
+	* example/streamgrab.sh: added
+
+	* example/tester.sh: improved to give more info
+
 2005-03-15    <tino@firebird.03.softkill.net>
 
 	* socklinger.c (socklinger): fo now specially treated if fo!=fi
